# openroam

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-HARDWARE  README.md
docs/assembly/: QUICK-START.md
hardware/: INDEX.md  MASTER-BOM.csv  README.md
hardware/climate-hat/: README.md
hardware/enclosures/: PRINT-SETTINGS.md  README.md
hardware/enclosures/antenna-mount/: README.md
hardware/enclosures/camera-pod-front/: README.md  camera-pod-front.scad
hardware/enclosures/camera-pod-mini/: README.md
hardware/enclosures/camera-pod-rear/: README.md
hardware/enclosures/camera-pod-side/: README.md
hardware/enclosures/cluster-box/: README.md  cluster-box.scad
hardware/enclosures/control-panel/: README.md
hardware/enclosures/dash-display-mount/: README.md
hardware/enclosures/hat-stack-case/: README.md  hat-stack-case.scad
hardware/enclosures/router-enclosure/: README.md
hardware/enclosures/sensor-box/: README.md
hardware/engine-monitor-hat/: README.md
hardware/lora-mesh-hat/: README.md
hardware/nav-hat/: README.md
hardware/power-hat/: README.md
hardware/tank-hat/: README.md
hardware/vehicle-hat/: README.md
images/: README.md
images/nav-node/: config.txt
k3s/: README.md
k3s/base/: configmap.yaml  namespace.yaml
software/: README.md
software/openroam-core/: pyproject.toml
software/openroam-core/openroam_core/: __init__.py  config.py  mock_data.py  mqtt_client.py  roamk.py  server.py
software/openroam-dashboard/: package.json  tailwind.config.js
software/openroam-dashboard/src/: app.css  app.html
tools/ansible/: README.md
(+8 files in other folders)
